<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/speedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speedLabel" />

    <TextView
        android:id="@+id/speedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speedValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/headingLabel" />

    <TextView
        android:id="@+id/headingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/speedSpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setSpeedLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/speedSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/speedEntries" />

    <TextView
        android:id="@+id/driveTimeSpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDriveTimeLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/driveTimeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/driveTimeEntries" />

    <TextView
        android:id="@+id/headingSpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setHeadingLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/headingSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/headingEntries" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go" />

</LinearLayout>